--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-python-dotenv
-requests
-pandas
+python-dotenv>=0.19.2
+requests>=2.27.1
+pandas>=1.4.1
+numpy>=1.22.2
+matplotlib>=3.5.1
+seaborn>=0.11.2
+scikit-learn>=1.0.2
+statsmodels>=0.13.2
+scipy>=1.8.0
